[package]
name = "redis-queue"
version = "0.1.0"
edition = "2021"
description = "Minimal Redis queue (LPUSH/BRPOP) with async Worker abstraction"
license = "MIT"
repository = "https://github.com/instalog-dev/redis-queue"

[dependencies]
deadpool-redis = { version = "0.19", features = ["rt_tokio_1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
